# moveit_based_collision_checker_and_placement

./: README.md
collision_check/: CMakeLists.txt  package.xml
collision_check/include/collision_check/: collision_check.h
collision_check/launch/: collision_check.launch
collision_check/src/: collision_check.cpp
collision_check/srv/: collision_check_srv.srv
isaac_firefly_adaptation/: .setup_assistant  CMakeLists.txt  package.xml
isaac_firefly_adaptation/config/: fake_controllers.yaml  joint_limits.yaml  my_fake_robot.srdf  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
isaac_firefly_adaptation/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
isaac_firefly_adaptation/urdf/: fake_firefly.urdf  firefly_rotors.urdf
isaac_firefly_adaptation/usd/: env_base (copy).usd  env_base.usd  my_robot (copy).usd
moveit_core/collision_detection/include/moveit/collision_detection/: collision_env.h
moveit_core/collision_detection_fcl/include/moveit/collision_detection_fcl/: collision_env_fcl.h
moveit_core/collision_detection_fcl/src/: collision_env_fcl.cpp
